# reversi

./: .clang-format  ArgumentParser.cpp  ArgumentParser.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  LICENSE  MoveParser.cpp  MoveParser.h  README.md  Reader.cpp  Reader.h  Writer.cpp  Writer.h  main.cpp
source/: ArgumentParser.cpp  ArgumentParser.h  Board.cpp  Board.h  Cell.h  MoveParser.cpp  Writer.cpp  Writer.h  bitset64.h  board.cpp  board.h  cell.h  engine.cpp  engine.h  main.cpp  time_wrapper.h
